examples/error/hierachical_modelling/paraHRefParseError/mfiles/myMFunction.m
function ret=myMFunction(a)
  ret=a;
